@@ -654,6 +654,13 @@ Details    : If a OST has no remain object, system will block on the creating
 	     pre-created objects when available, instead of blocking on an
 	     empty osc while others are not empty.  If we must block, we block
 	     for the shortest possible period of time.
+
+Severity   : normal
+Bugzilla   : 13148
+Frequency  : only in recovery
+Description: Mark OST as as early accessible if his start SYNC.
+Details    : osc_precreate return flag early accessible if oscc marked as 
+             OSCC_FLAG_SYNC_IN_PROGRESS.
 	     
 --------------------------------------------------------------------------------
 
